# yoshida-avatar-msgs

./: CMakeLists.txt  README.md  package.xml
msg/: L64x0.msg
zephyr/: CMakeLists.txt  Kconfig  avatar_msgs.cmake  module.yml
