<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>avatar_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS messages for Avatar Robot.
  </description>

  <maintainer email="yashi@spacecubics.com">Yasushi SHOJI</maintainer>

  <license>Apache License 2.0</license>
  <url>http://ros.org/wiki/avatar_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_core_generators</buildtool_depend>

  <exec_depend>rosidl_core_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
